2010-05-12  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: This bit wasn't supposed to be
	  part of my last commit. Fixes the regressions in moon-unit
	  and 232 caused by my last commit.

2010-05-12  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: When we add a new item to the ICV
	  we need to refresh it. We also need to keep that item
	  selected after we refresh.

2010-05-12  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: When we call AddNew we need to
	  select the new item automatically. We also need to throw
	  exceptions if we try to CommitNew or CancelNew while
	  editing. Fixes another few tests in 232.

2010-05-12  Alan McGovern  <amcgovern@novell.com>

	* CollectionViewSource.cs: Call the factory method to create
	  the correct type of collection view.

	* CollectionView.cs: Add a CollectionView class which contains
	  a factory method to create the correct ICollectionView for a
	  given source collection.

	* EnumerableCollectionView.cs: Add a new
	  EnumerableCollectionView which works with IEnumerables which
	  are not ILists.

	* StandardCollectionView.cs: Refactor StandardCollectionView
	  so that it only accepts an IList.

2010-05-12  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: Refactor StandardCollectionView
	  so that we only use the filtered list when we are grouping,
	  filtering or sorting. Fixes more of 232 and the new
	  moon-units.

2010-05-11  Alan McGovern  <amcgovern@novell.com>

	* GroupEnumerator.cs: We aren't guaranteed that items will
	  only live in leaf elements of the Group tree. Update the
	  GroupEnumerator to take this into account.

2010-05-11  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionViewGroup.cs: StandardCollectionView has
	  two distinct ways of adding/removing/clearing the items.
	  AddItem/RemoveItem/ClearItems do as you'd expect, they
	  add/remove/clear the items in that group.