@@ -1,3 +1,10 @@
+2010-05-13  Alan McGovern  <amcgovern@novell.com>
+
+	* StandardCollectionView.cs: Add extra tests to ensure that we
+	  emit PropertyChanged events correctly for CurrentItem and
+	  CurrentPosition. Both fields need to be updated before any
+	  event is raised.
+
 2010-05-12  Alan McGovern  <amcgovern@novell.com>
 
 	* StandardCollectionView.cs: This bit wasn't supposed to be
